--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input type="text" placeholder="Sua resposta">
             </div>
     
-            <button class="button" onclick="revealSurprise()">Clique para a Surpresa!</button>
+            <button id="submit_btn" class="button" onclick="revealSurprise()">Clique para a Surpresa!</button>
     
             <script>
                 function revealSurprise() {
