--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
             <script>
                 function revealSurprise() {
-                    alert("Você é a razão do meu sorriso! ❤️");
+                    alert("Você é meu lar! ❤️");
                 }
             </script>
             <script type="text/javascript" src="index.js"></script>
